# pavona

./: .bazelrc  .mdbookignore  MODULE.bazel  README.md  SECURITY.md  SUMMARY.md  apt-requirements.txt  book.toml  yum-requirements.txt
.github/actions/dvsim/: action.yml
.github/actions/prepare-env/: action.yml
.github/actions/publish-bazel-test-results/: action.yml
.github/workflows/: bitstream.yml  build-docs.yml  cherrypick.yml  ci.yml  cryptotest.yml  cw340-pr.yml  dv-all.yml  fpga.yml  merge-group.yml  nightly.yml  pr_change_check.yml  verify-fpga.yml  weekly.yml
ci/scripts/: check-ascii.sh  check-countermeasures.sh  check-sim-cfgs.py  run-fpga-tests.sh
doc/contributing/: bazel_notes.md  github_notes.md  system_list.md
doc/contributing/ci/: README.md
doc/contributing/dv/methodology/: building_scalable_system_verilog_uvm_infrastructure_for_open_silicon_ips.md  pavona_reset_safe_porting_guide.md
doc/contributing/hw/comportability/: README.md  hjsons_in_comportability.md
doc/getting_started/: README.md  intro_software.md  pavona_101.md
hw/: Makefile
hw/dv/: all_sim_cfgs.hjson
hw/dv/grading/: grading_report.hjson
hw/dv/sv/dv_lib/: dv_base_env_cfg.sv
hw/dv/sv/kmac_app_agent/: kmac_app_agent_pkg.sv  kmac_app_intf.sv  kmac_app_monitor.sv
hw/dv/sv/push_pull_agent/: push_pull_driver_lib.sv
hw/dv/sv/spi_agent/: spi_host_driver.sv  spi_if.sv
hw/dv/tools/dvsim/: vcs.hjson
hw/ip/acc/: README.md  acc.core
hw/ip/acc/doc/: isa.md  (+1 more)
hw/ip/hmac/: README.md
hw/top/: README.md
hw/top/doc/: create_top.md
hw/top_darjeeling/: README.md
hw/top_darjeeling/data/: top_darjeeling.hjson
hw/top_darjeeling/doc/: datasheet.md
hw/top_darjeeling/lint/: top_darjeeling_dv_lint_cfgs.hjson
hw/top_darjeeling/templates/: toplevel.sv.tpl
hw/top_dragonfly/doc/: top_dragonfly_block_diagram.drawio
hw/top_dragonfly/dv/: chip_dragonfly_sim_cfg.hjson
hw/top_earlgrey/data/: top_earlgrey.hjson
hw/top_earlgrey/doc/: datasheet.md
hw/top_earlgrey/dv/: top_earlgrey_sim_cfgs.hjson
hw/top_earlgrey/templates/: toplevel.sv.tpl
hw/top_egret/doc/: top_egret_block_diagram.drawio
quality/: BUILD.bazel  licenses.hjson
rfc/rfc-2026-01-DV-Reset-Management/: Reset_Flow.excalidraw  rfc_2026_01_dv_reset_management.md
rfc/rfc-2026-XX-Versioning/: rfc_2026_XX_versioning.md
rules/: acc.bzl  autogen.bzl  bitstreams.bzl  otbn.bzl
rules/scripts/: bitstreams_workspace.py
sw/acc/crypto/: p384_base.s
sw/device/tests/: BUILD  aon_timer_irq_test.c  entropy_src_bypass_mode_health_test.c  flash_ctrl_info_access_lc.c  keymgr_derive_cdi_test.c  lc_ctrl_otp_hw_cfg0_test.c  usbdev_mem_test.c  usbdev_suspend.c
sw/otbn/crypto/: BUILD  ed25519.s  field25519.s  modexp.s  modinv.s  p256_base.s  p256_isoncurve.s  p256_shared_key.s  p384_keygen.s  rsa_keygen.s
util/: BUILD  gen_doc_hw_summary_table.py  gen_ip_collection.py  gen_system_list.py  gen_top_docs.py  gen_top_ipconfigs.py  gen_top_ral.py  gen_top_sv.py  gen_top_sw.py  grade_regression_vcs.py  ipgen.py  mdbook_template.py  raclgen.py  selfdoc.py  tlgen.py  top_cm_and_blocks.py  topgen.py  vendor.py
util/design/: README.md
util/design/lib/: OtpMemMap.py
util/doc/: vendor.md
util/dtgen/: README.md
util/dvsim/: CfgFactory.py  FlowCfg.py  README.md  SimCfg.py  dvsim.py  modes.py  style.css
util/dvsim/doc/: design_doc.md  glossary.md
util/fpvgen/: README.md
util/ipgen/: README.md  clkmgr_gen.py
util/py/scripts/: build_sw_collateral_for_sim.py
util/raclgen/: README.md
util/reggen/: README.md  access.py  countermeasure.py  gen_cfg_html.py  gen_rtl.py  gen_selfdoc.py  params.py  register.py
util/site/: build-docs.sh  link_headers.py
util/site/book-theme/: book.js  highlight.css  index.hbs
util/tlgen/: generate.py  generate_tb.py  xbar.BUILD.tpl  xbar.sim_cfg.hjson.tpl
util/topgen/: README.md  c_test.py  clocks.py  lib.py  resets.py  selfdoc.py  validate.py
util/uvmdvgen/: README.md  __init__.py  sva.core.tpl
(+406 files in other folders)
