# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")
load("@ot_python_deps//:requirements.bzl", "requirement")
load("//rules:quality.bzl", "clang_tidy_rv_test", "clang_tidy_test", "html_coverage_report")

package(default_visibility = ["//visibility:public"])

py_test(
    name = "license_check",
    srcs = ["license_check.py"],
    args = [
        "--config",
        "$(location //quality:licenses.hjson)",
    ],
    data = ["licenses.hjson"],
    tags = [
        "external",
        "no-cache",
        "no-sandbox",
    ],
    deps = [
        requirement("hjson"),
        requirement("tabulate"),
    ],
)

alias(
    name = "clang-format",
    actual = "@llvm_toolchain_llvm//:bin/clang-format",
)

alias(
    name = "rustfmt",
    actual = "@rules_rust//tools/upstream_wrapper:rustfmt",
)

alias(
    name = "buildifier",
    actual = "@buildifier_prebuilt//:buildifier",
)

# Run all formatters.
format_multirun(
    name = "format",
    c = ":clang-format",
    cc = ":clang-format",
    rust = ":rustfmt",
    starlark = ":buildifier",
)

# Check all formatting.
format_test(
    name = "format_check",
    c = ":clang-format",
    cc = ":clang-format",
    no_sandbox = True,
    rust = ":rustfmt",
    starlark = ":buildifier",
    workspace = "//:MODULE.bazel",
)

# Run all clang formatters (C and C++).
format_multirun(
    name = "clang_format_fix",
    c = ":clang-format",
    cc = ":clang-format",
)

# Check all clang formatting (C and C++).
# This is a test suite so it can share cache with `:format_check`.
test_suite(
    name = "clang_format_check",
    tests = [
        ":format_check_C++_with_clang-format",
        ":format_check_C_with_clang-format",
    ],
)

# Run `rustfmt` on all Rust code.
alias(
    name = "rustfmt_fix",
    actual = ":format_Rust_with_rustfmt",
)

# Check formatting on all Rust code.
test_suite(
    name = "rustfmt_check",
    tests = [":format_check_Rust_with_rustfmt"],
)

# Format all `BUILD` and `.bzl` files in the project.
# See `.gitmodules` > `rules-lint-ignored` for ignoring files.
alias(
    name = "buildifier_fix",
    actual = ":format_Starlark_with_buildifier",
)

# Check formatting for all Bazel `BUILD` and `.bzl` files.
test_suite(
    name = "buildifier_check",
    tests = [":format_check_Starlark_with_buildifier"],
)

# TODO(dmcardle) Add more targets that should be automatically checked with
# clang-tidy. Find a way to automate this.
clang_tidy_rv_test(
    name = "clang_tidy_check_rv",
    deps = [
        "//sw/device/lib/base:memory",
        "//sw/device/lib/base:memory_perftest",
        "//sw/device/silicon_creator/rom:boot_policy",
        "//sw/device/silicon_creator/rom:bootstrap",
        "//sw/device/silicon_creator/rom:mask_rom_lib",
        "//sw/device/silicon_creator/rom:rom_common",
        "//sw/device/silicon_creator/rom:rom_epmp",
        "//sw/device/silicon_creator/rom:sigverify_keys_spx",
    ],
)

clang_tidy_test(
    name = "clang_tidy_check_host",
    deps = [
        "//sw/device/silicon_creator/rom:boot_policy_unittest",
        "//sw/device/silicon_creator/rom:bootstrap_unittest",
    ],
)

test_suite(
    name = "clang_tidy_check",
    tests = [
        ":clang_tidy_check_host",
        ":clang_tidy_check_rv",
    ],
)

html_coverage_report(
    name = "html_coverage_report",
)

sh_test(
    name = "shellcheck_check",
    srcs = ["//util/sh/scripts:run-shellcheck.sh"],
    data = [
        "//:MODULE.bazel",
        "@shellcheck",
    ],
    env = {
        "SHELLCHECK": "$(location @shellcheck//:shellcheck)",
    },
    tags = [
        "external",
        "no-cache",
        "no-sandbox",
    ],
)
